# mcp-skill

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  regen_skills.sh
.github/release/: release-please-config.json
.github/workflows/: conventional-pr.yml  release.yml
13/c65eb6a821/: metadata.json
13/c65eb6a821/0/: content_hash.txt  metadata.json
1e/f6408fdc4a/: metadata.json
1e/f6408fdc4a/0/: content_hash.txt  full.jsonl  metadata.json
1e/f6408fdc4a/1/: full.jsonl  metadata.json
1e/f6408fdc4a/2/: metadata.json
7f/a7de633f62/: metadata.json
7f/a7de633f62/0/: metadata.json
b1/adfe56b011/: metadata.json
b1/adfe56b011/0/: content_hash.txt  metadata.json
b1/adfe56b011/1/: full.jsonl  metadata.json
e8/3d53f596e5/: metadata.json
e8/3d53f596e5/0/: content_hash.txt  full.jsonl  metadata.json
scripts/: test_linear_smoke.py
skills/airtable/: SKILL.md  app.py
skills/buffer/: SKILL.md  app.py
skills/canva/: SKILL.md
skills/clickup/: SKILL.md  app.py
skills/context7/: SKILL.md  app.py
skills/linear/: SKILL.md  app.py
skills/mcp_skill/: SKILL.md
skills/notion/: SKILL.md  app.py
skills/paralel_search/: app.py
skills/parallel_search/: SKILL.md
skills/pubmed/: SKILL.md  app.py
skills/sentry/: SKILL.md  app.py
src/mcp_skill/: __init__.py  catalog.py  cli.py  generator.py  introspector.py  type_mapper.py  validator.py
src/mcp_skill/auth/: __init__.py  api_key.py  bearer.py  client_credentials.py  oauth.py  storage.py
src/mcp_skill/templates/: app.py.j2  skill.md.j2
